--- a/org-setup.org
+++ b/org-setup.org
@@ -280,7 +280,8 @@ The default agenda lacks a little oomph. What I'd like to see is collections suc
 - tasks for today
 - tasks to be refiled
 - tasks for next week
-- tasks that are waiting
+- tasks that are unscheduled
+- tasks that are waiting/someday
 
 #+header: :tangle yes
 #+BEGIN_SRC emacs-lisp :export yes
@@ -293,8 +294,11 @@ The default agenda lacks a little oomph. What I'd like to see is collections suc
 				     (org-agenda-start-on-weekday nil)
 				     (org-agenda-start-day "+0d")
 				     ;; Remove refiling tasks (https://www.reddit.com/r/orgmode/comments/69acg5/orgagendaskipentryif_but_for_categories/)
-				     (org-agenda-skip-function '(when (equal (file-name-nondirectory (buffer-file-name)) "refile.org")
-								  (outline-next-heading) (1- (point))))
+				     (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
+								       (outline-next-heading) (1- (point)))
+								      (t (org-agenda-skip-entry-if 'todo 'done))
+								      ))
+				     ;; (org-agenda-skip-entry-if 'todo 'done)
 				     (org-agenda-todo-ignore-deadlines nil)))
 			 ;; Refiling category set file wide in file.
 			 (tags "REFILING" ((org-agenda-overriding-header "Tasks to Refile:")
@@ -308,6 +312,12 @@ The default agenda lacks a little oomph. What I'd like to see is collections suc
 								  (outline-next-heading) (1- (point))))
 				     ;; I should set this next one to true, so that deadlines are ignored...?
 				     (org-agenda-todo-ignore-deadlines nil)))
+			 ;; Tasks that are unscheduled
+			 (todo "TODO" ((org-agenda-overriding-header "Unscheduled Tasks:")
+				       (org-tags-match-list-sublevels nil)
+				       ;; (org-agenda-skip-entry-if 'scheduled 'deadline)
+				       (org-agenda-todo-ignore-scheduled 'all)
+				       ))
 			 ;; Tasks that are waiting or someday
 			 (todo "WAITING|SOMEDAY" ((org-agenda-overriding-header "Waiting/Someday Tasks:")
 					 (org-tags-match-list-sublevels nil)))
