--- a/org-setup.org
+++ b/org-setup.org
@@ -309,8 +309,10 @@ The default agenda lacks a little oomph. What I'd like to see is collections suc
 				     (org-agenda-span 7)
 				     (org-agenda-start-day "+1d")
 				     (org-agenda-start-on-weekday nil)
-				     (org-agenda-skip-function '(when (equal (file-name-nondirectory (buffer-file-name)) "refile.org")
-								  (outline-next-heading) (1- (point))))
+				     (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
+								       (outline-next-heading) (1- (point)))
+								      (t (org-agenda-skip-entry-if 'todo 'done))
+								      ))
 				     ;; I should set this next one to true, so that deadlines are ignored...?
 				     (org-agenda-todo-ignore-deadlines nil)))
 			 ;; Tasks that are unscheduled
@@ -325,5 +327,10 @@ The default agenda lacks a little oomph. What I'd like to see is collections suc
 			 )
 	   )
 	  )				; end list
+
+	;; If an item has a (near) deadline, and is scheduled, only show the deadline.
+	org-agenda-skip-scheduled-if-deadline-is-shown t
 	)
 #+END_SRC
+
+The last line only shows one copy of the task---without it, both the scheduled, and the deadline task will show up.
