--- a/modeline-setup.org
+++ b/modeline-setup.org
@@ -53,10 +53,37 @@ Using =all-the-icons= we can bling things up a bit:
     (spaceline-all-the-icons--setup-neotree)
     (setq spaceline-all-the-icons-hide-long-buffer-path t)
     (setq spaceline-all-the-icons-slim-render t)
+
+    ;; Effort segment
+    (spaceline-define-segment sl/my-org-effort
+      "An `all-the-icons' segment to display the current org-clock task."
+      (let ((face `(:height ,(spaceline-all-the-icons--height 0.9) :inherit)))
+	(propertize
+	 (concat
+	  (propertize (all-the-icons-faicon "check-circle" :v-adjust 0.1)
+		      'face `(:height ,(spaceline-all-the-icons--height 1.1) :family ,(all-the-icons-faicon-family) :inherit))
+	  " "
+	  (propertize (truncate-string-to-width (org-clock-get-clock-string) 30 nil nil "…")
+		      'face face
+		      'display '(raise 0.1)))
+	 'help-echo "Go to task"
+	 'mouse-face (spaceline-all-the-icons--highlight)
+	 'local-map (make-mode-line-mouse-map 'mouse-1 #'org-clock-goto)))
+      :when (and active
+		 (bound-and-true-p org-clock-current-task)))
+
+    ;; Turn off an options
+    (spaceline-toggle-all-the-icons-projectile-off)
+    (spaceline-toggle-all-the-icons-hud-off)
+    (spaceline-toggle-all-the-icons-org-clock-current-task-off)
+    ;; Enable my segment
+    (spaceline-all-the-icons-theme 'sl/my-org-effort)
     )
 #+END_SRC
 
 Here, the theme is set, and some options to make things a little slimmer.
+
+Take a look at the =sl/my-org-effort= segment definition. This comes straight from the source (=spaceline-all-the-icons-segments.el=) for the =all-the-icons-org-clock-current-task= segment. I've just replaced the =org-clock-current-task= with a call to =(org-clock-get-clock-string)= which is what is used in the standard modeline---that function displays the time spent, as well as the effort allowed, which is good info I reckon.
 
 * moody/minions
 
